--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
